--- a/lambda-serving/requirements.txt
+++ b/lambda-serving/requirements.txt
@@ -2,7 +2,6 @@ numpy
 boto3
 pytest
 python-dotenv
-torch
 
 decorator
 attrs
@@ -14,3 +13,6 @@ cloudpickle
 onnx
 protobuf
 onnxruntime
+
+Pillow
+request_toolbelt
