git clone 수정(arm)

--- a/lambda-serving/arm/Dockerfile
+++ b/lambda-serving/arm/Dockerfile
@@ -11,15 +11,17 @@ RUN mkdir -p /var/task/lib
 RUN cp /usr/lib64/atlas-sse3/liblapack.so.3 /var/task/lib/. & cp /usr/lib64/atlas-sse3/libptf77blas.so.3 /var/task/lib/. & cp /usr/lib64/atlas-sse3/libf77blas.so.3 /var/task/lib/. & cp /usr/lib64/atlas-sse3/libptcblas.so.3 /var/task/lib/. & cp /usr/lib64/atlas-sse3/libcblas.so.3 /var/task/lib/. & cp /usr/lib64/atlas-sse3/libatlas.so.3 /var/task/lib/. & cp /usr/lib64/atlas-sse3/libptf77blas.so.3 /var/task/lib/. & cp /usr/lib64/libgfortran.so.3 /var/task/lib/. & cp /usr/lib64/libquadmath.so.0 /var/task/lib/.
 
 # git 특정 폴더만 clone
-RUN mkdir lambda-serving
-WORKDIR lambda-serving
+RUN mkdir lambda-optimize-serving
+WORKDIR lambda-optimize-serving
+RUN git init
 RUN git config core.sparseCheckout true
 RUN git remote add -f origin https://github.com/ddps-lab/lambda-optimize-serving
-RUN echo https://github.com/ddps-lab/lambda-optimize-serving/tree/main/lambda-serving/arm >> .git/info/sparse-checkout
+RUN echo lambda-serving/arm/* >> .git/info/sparse-checkout
 RUN git pull origin main
+WORKDIR lambda-serving/intel
 
 # tvm env 설정 
-ENV TVM_HOME=/var/task/lambda-serving/tvm
+ENV TVM_HOME=/var/task/lambda-optimize-serving/lambda-serving/arm/tvm
 ENV PATH=$PATH:$TVM_HOME/bin
 ENV PYTHONPATH=$TVM_HOME/python:${PYTHONPATH}
 ENV PATH=$TVM_HOME/python:$PATH
