--- a/lambda-serving/arm/Dockerfile
+++ b/lambda-serving/arm/Dockerfile
@@ -16,7 +16,7 @@ RUN git config core.sparseCheckout true
 RUN git remote add -f origin https://github.com/ddps-lab/lambda-optimize-serving
 RUN echo lambda-serving/arm/* >> .git/info/sparse-checkout
 RUN git pull origin main
-WORKDIR lambda-serving/intel
+WORKDIR lambda-serving/arm
 
 # tvm env 설정 
 ENV TVM_HOME=/var/task/lambda-optimize-serving/lambda-serving/arm/tvm
