--- a/lambda-serving/arm_torch/Dockerfile
+++ b/lambda-serving/arm_torch/Dockerfile
@@ -14,9 +14,9 @@ WORKDIR lambda-optimize-serving
 RUN git init
 RUN git config core.sparseCheckout true
 RUN git remote add -f origin https://github.com/jaeriver/lambda-optimize-serving
-RUN echo lambda-serving/arm_base/* >> .git/info/sparse-checkout
+RUN echo lambda-serving/arm_torch/* >> .git/info/sparse-checkout
 RUN git pull origin main
-WORKDIR lambda-serving/arm_base
+WORKDIR lambda-serving/arm_torch
 
 RUN pip3 install -r requirements.txt
 
