--- a/lambda-serving/arm_torch/Dockerfile
+++ b/lambda-serving/arm_torch/Dockerfile
@@ -1,10 +1,7 @@
 FROM public.ecr.aws/lambda/python:3.8-arm64
 
 # install essential library
-RUN yum install -y wget
-RUN yum -y install cmake3 gcc gcc-c++ make && ln -s /usr/bin/cmake3 /usr/bin/cmake
-RUN yum -y install python3-dev python3-setuptools libtinfo-dev zlib1g-dev build-essential libedit-dev llvm llvm-devel libxml2-dev git tar gcc gcc-c++
-RUN yum -y install libgomp gcc-gfortran libgfortran blas lapack atlas-sse3-devel
+RUN yum -y install wget python3-dev python3-setuptools libtinfo-dev zlib1g-dev build-essential libedit-dev libxml2-dev git tar gcc gcc-c++
 RUN pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 
 
